# airs-compression

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  INSTALL.adoc  README.adoc  meson.build  meson_options.txt
docs/: Doxyfile.in  cliff.toml  meson.build
examples/: meson.build  multi_pass_compression.c  simple_compression.c  single_pass_compression.c
lib/: cmp.h  cmp_errors.h  cmp_header.h  meson.build
lib/common/: bithacks.h  bitstream_writer.h  byteorder.h  cmp_errors.c  compiler.h  err_private.h  header.c  header.h  header_private.h  meson.build  sample_reader.h
lib/compress/: bitstream_write.h  cmp.c  encoder.c  encoder.h  meson.build  preprocess.c  preprocess.h
lib/decompress/: arena.h  decmp.c  decmp.h  meson.build  read_bitstream.h
programs/: README.adoc  airspacecli.c  arena.h  file.c  file.h  log.c  log.h  meson.build  params_parse.c  params_parse.h  str_slice.h  util.c  util.h
scripts/: get_library_version.py
subprojects/: unity.wrap
subprojects/packagefiles/Unity-2.6.1/: 0001-fix-update-meson-options-to-avoid-deprecation-warnin.patch  0002-meson-Add-EXTRA_ARGS-to-generate_test_runner-argumen.patch
test/: .leak.suppress  cli_basic_test.py  cli_compression_test.py  cli_decompression_test.py  clitest.py  get_library_version.py  iwt_test_data.h  meson.build  test_buildsetup.c  test_cmp.c  test_cmp_errors.c  test_common.c  test_common.h  test_decmp.c  test_encoder.c  test_header.c  test_initialisation.c  test_params_parse.c  test_preprocessing.c
test/fuzz/: fuzz.h  fuzz_compress.c  fuzz_helpers.c  fuzz_helpers.h  meson.build
